# coldstore

./: .gitignore  Cargo.toml  Makefile  README.md  README_RUST.md  README_ZH.md
.github/workflows/: rust.yml
config/: config.yaml.example
crates/cache/: Cargo.toml
crates/cache/src/: backend.rs  hdd.rs  lib.rs  main.rs  service.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  models.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: handler.rs  lib.rs  main.rs  protocol.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: command.rs  lib.rs  main.rs  raft.rs  raft_storage.rs  service.rs  state_machine.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: cache.proto  common.proto  metadata.proto  scheduler.proto  tape.proto
crates/proto/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  main.rs  service.rs
crates/tape/: Cargo.toml
crates/tape/src/: lib.rs  main.rs  service.rs
docs/: DESIGN.md  README.md
docs/modules/: 01-access-layer.md  02-protocol-adapter.md  03-metadata-cluster.md  04-cache-layer.md  05-scheduler-layer.md  06-tape-layer.md  07-consistency-performance.md  08-observability.md  09-admin-console.md  README.md
docs/plans/: 2026-04-15-phase1-safe-implementation-plan.md  2026-04-25-phase2-metadata-raft.md
scripts/: pre-commit
src/: config.rs  error.rs  lib.rs  main.rs  models.rs
src/cache/: manager.rs
src/metadata/: backend.rs  mod.rs  service.rs
src/notification/: mod.rs  service.rs
src/s3/: handler.rs  mod.rs  server.rs
src/scheduler/: archive.rs  mod.rs  recall.rs
src/tape/: driver.rs  manager.rs  mod.rs
