[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/common",
    "crates/metadata",
    "crates/gateway",
    "crates/scheduler",
    "crates/cache",
    "crates/tape",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/coldstore"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP server (Gateway S3 layer)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1"
hyper = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time and identity
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Configuration
config = "0.14"

# Streaming
tokio-stream = "0.1"

# Checksum
sha2 = "0.10"

# Internal crates
coldstore-proto = { path = "crates/proto" }
coldstore-common = { path = "crates/common" }
