[package]
name = "coldstore-gateway"
description = "ColdStore S3-compatible gateway (stateless)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "coldstore-gateway"
path = "src/main.rs"

[dependencies]
coldstore-proto = { workspace = true }
coldstore-common = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
sha2 = { workspace = true }
