[package]
name = "coldstore-metadata"
description = "ColdStore metadata cluster node (Raft + RocksDB)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "coldstore-metadata"
path = "src/main.rs"

[features]
default = []
metadata-raft = ["dep:openraft"]
metadata-raft-rocksdb = ["metadata-raft", "dep:rocksdb"]

[dependencies]
coldstore-proto = { workspace = true }
coldstore-common = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }

# Phase 2A starts with opt-in local binary snapshot persistence in service.rs.
# Phase 2B keeps OpenRaft + RocksDB behind the `metadata-raft` feature until the
# command/state-machine boundary is stable enough to become the default backend.
openraft = { version = "0.10.0-alpha.18", optional = true }
rocksdb = { version = "0.24", default-features = false, optional = true }
