[package]
name = "coldstore-proto"
description = "ColdStore gRPC protocol definitions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
