[package]
name = "coldstore-scheduler"
description = "ColdStore scheduler worker (business orchestration hub)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "coldstore-scheduler"
path = "src/main.rs"

[dependencies]
coldstore-proto = { workspace = true }
coldstore-common = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }

tokio-stream = { workspace = true }
