[package]
name = "coldstore-tape"
description = "ColdStore tape worker (SCSI tape drive management)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "coldstore-tape"
path = "src/main.rs"

[dependencies]
coldstore-proto = { workspace = true }
coldstore-common = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }

# TODO: Phase 4 - Linux SCSI ioctl
# nix = { version = "0.29", features = ["ioctl"] }

tokio-stream = { workspace = true }
